docker-compose.yml for postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,25 @@ services:
       timeout: 5s
       retries: 5
 
-  # ---------- MYSQL ADMINER ----------
+  # ---------- POSTGRES DATABASE ----------
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # ---------- ADMINER ----------
   adminer:
     image: adminer
     container_name: adminer
@@ -31,3 +49,4 @@ services:
 
 volumes:
   mysql_data:
+  postgres-data:
