--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,8 @@ services:
   # ---------- MYSQL DATABASE ----------
   mysql:
     image: mysql:8.0
-    container_name: mysql
     ports:
-      - "3306:3306"
+      - "3307:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: employees
@@ -21,13 +20,13 @@ services:
   # ---------- POSTGRES DATABASE ----------
   postgres:
     image: postgres:latest
-    container_name: postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
     ports:
       - "5433:5432"
+    command: ["postgres", "-c", "max_connections=500"]
     volumes:
       - postgres-data:/var/lib/postgresql
     healthcheck:
@@ -39,9 +38,8 @@ services:
   # ---------- ADMINER ----------
   adminer:
     image: adminer
-    container_name: adminer
     ports:
-      - "8006:8080"
+      - "8007:8080"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
