--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,4 +1,4 @@
-hibernate.connection.url=jdbc:mysql://localhost:3306/test_db
+hibernate.connection.url=jdbc:mysql://localhost:3306/employees
 hibernate.connection.username=root
 hibernate.connection.password=root
 hibernate.show_sql=true
