--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: employees
+      MYSQL_DATABASE: isolation_levels
     volumes:
-      - mysql_data:/var/lib/mysql
+      - mysql-data:/var/lib/mysql
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
@@ -21,9 +21,7 @@ services:
   postgres:
     image: postgres:latest
     environment:
-      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
     ports:
       - "5432:5432"
     command: ["postgres", "-c", "max_connections=500"]
@@ -39,12 +37,12 @@ services:
   adminer:
     image: adminer
     ports:
-      - "8090:8080"
+      - "8099:8080"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
       - mysql
 
 volumes:
-  mysql_data:
+  mysql-data:
   postgres-data:
