--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -3,4 +3,4 @@ hibernate.connection.username=root
 hibernate.connection.password=root
 hibernate.show_sql=true
 hibernate.highlight_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=none
