--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       MYSQL_DATABASE: isolation_levels
     volumes:
       - mysql-data:/var/lib/mysql
-      - ./mysql:/docker-entrypoint-initdb.d
+      - ./db/mysql:/docker-entrypoint-initdb.d
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
@@ -28,6 +28,7 @@ services:
     command: ["postgres", "-c", "max_connections=500"]
     volumes:
       - postgres-data:/var/lib/postgresql
+      - ./db/postgres:/docker-entrypoint-initdb.d
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
       interval: 10s
